Actualizacion de cambios
Subir nuevas opciones de mi pagina Web

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                <ul>
                     <li><a href="Conociendome/perso.html">Conociendome</a></li>
                     <li><a href="Pasatiempos/hobbies.html">Pasatiempos</a></li>
-                    <li><a href="">Herramientas</a></li>
-                    <li><a href="">Emprendedor</a></li>
+                    <li><a href="Examen1ero/examen.html">Examen1ro</a></li>
+                    <li><a href="ExamenPractica/autos.html">Practica</a></li>
                     <li><a href="">Contacto</a></li>
                </ul>
           </nav>
