Cambios en el Index
Se enlistan los pendientes que tengo que realizar.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
      </style>
 </head>
 <body>
+     <h1>CAMBIOS A REALIZAR</h1>
+     <ul>
+          <li>Subir ejemplo de las Agencia</li>
+          <li>Subir mis pasatiempos</li>
+     </ul>
      <header>
           <img src="archivos/logo.png" alt="" class="logo">
           <nav>
