Aplicar Colores, Background, BoxModel, Sombras, Desbordamiento y Desplazamiento
Se actualizan ejemplos para los alumnos de IDAI

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+     <link rel="icon" type="image/ico" href="canine_patrol_paw_patrol_logo_icon_263850.ico">
+     <link rel="stylesheet" href="">
      <title>Pagina Personal</title>
 
      <style>
@@ -20,6 +22,7 @@
                padding: 10px 0px;
                border-bottom: 1px solid #dedede;
                margin-bottom: 100px;
+
           }
 
           li{
@@ -58,21 +61,6 @@
                color: #fff;
           }
 
-          /* MENU 2 
-          .menu2{
-               padding: 10px 5%;
-          }
-
-          .menu2 .logo{
-               margin-right: auto;
-          }
-
-          .menu2 .btn{
-               margin-left: 20px;
-          }
-          */
-          
-          /* MENU 3 */
           .menu3 .logo{
                order: 2;
           }
@@ -84,27 +72,32 @@
           .menu3 .btn{
                order: 0;
           }
+
      </style>
 </head>
 <body>
-     <h1>CAMBIOS A REALIZAR</h1>
-     <ul>
-          <li>Subir ejemplo de las Agencia</li>
-          <li>Subir mis pasatiempos</li>
-     </ul>
      <header>
-          <img src="archivos/logo.png" alt="" class="logo">
+          <img src="imagenes/2.png"  alt="" class="logo">
           <nav>
                <ul>
                     <li><a href="Conociendome/perso.html">Conociendome</a></li>
                     <li><a href="Pasatiempos/hobbies.html">Pasatiempos</a></li>
                     <li><a href="Examen1ero/examen.html">Examen1ro</a></li>
                     <li><a href="ExamenPractica/autos.html">Practica</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="Colores&BoxModel/variosEjemplos.html">Ejemplos colores y box model</a></li>
                </ul>
           </nav>
           <a href="" class="btn">Login</a>
      </header>
+     <!-- <nav>
+          <img src="imagenes/logo50UN.png" alt="" class="logo">
+     </nav> -->
+
+
 
 </body>
+
+<footer>
+     <strong>(c) Ing. Ricardo Arturo Elizalde Hernández</strong>
+</footer>
 </html>
