Subir los cambios del contacto
Esto sube la información personal

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li><a href="Pasatiempos/hobbies.html">Pasatiempos</a></li>
                     <li><a href="Examen1ero/examen.html">Examen1ro</a></li>
                     <li><a href="ExamenPractica/autos.html">Practica</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="Contacto/misdatos.html">Contacto</a></li>
                </ul>
           </nav>
           <a href="" class="btn">Login</a>
