Cambios agregando la universdad
OK

--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
 
 <footer>
      <strong>(c) Ing. Ricardo Arturo Elizalde Hernández</strong>
+     <i>Universidad del Norte, A.C.</i>
 </footer>
 </html>
