Ejemplo de Posicionamiento
Se describen varios ejemplos de Posicionamiento en HTML con Css

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                     <li><a href="Colores&BoxModel/variosEjemplos.html">Ejemplos colores y box model</a></li>
                     <li><a href="Contacto/misdatos.html">Contacto</a></li>
                </ul>
+               <ul>
+                    <li><a href="Posicionamiento/variosEjemplos.html">Posicionamiento</a></li>
+               </ul>
           </nav>
           <a href="" class="btn">Login</a>
      </header>
@@ -100,6 +103,7 @@
 
 <footer>
      <strong>(c) Ing. Ricardo Arturo Elizalde Hernández</strong>
+     <br>
      <i>Universidad del Norte, A.C.</i>
 </footer>
 </html>
