Subir cambios de mi tabla en el index
Subir cambios de mi tabla en el index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
           </nav>
           <a href="" class="btn">Login</a>
      </header>
+
+
+     <body>
+
+          <a href="Practicas/Practica01-Tabla.html">
+              Tabla con formato CSS3 Prácica 
+          </a>
+
+
+
+     </body>
+
+
      <!-- <nav>
           <img src="imagenes/logo50UN.png" alt="" class="logo">
      </nav> -->
