--- a/Practicas/PracticaJS-Funciones (Solucion).html
+++ b/Practicas/PracticaJS-Funciones (Solucion).html
@@ -25,6 +25,14 @@
     function suma(n1, n2) {
         var resultado;
         resultado = n1 + n2;
+        // La suma se aplica tanto para juntar cadenas de texto, como para operaciones con números
+        return resultado;
+    }
+
+    function resta(n1, n2) {
+        var resultado;
+        resultado = n1 - n2;
+        //La resta solo se ocupa con números
         return resultado;
     }
 
