--- a/Examen3erParcial/ReciboTelefonico.html
+++ b/Examen3erParcial/ReciboTelefonico.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- <form action=""></form> -->
-    <form id="calculoMinutos" action="ReciboTelefonico(JS).html" method="get" >
+    <form id="calculoMinutos" action="ReciboTelefonico(JS).html" method="GET">
         <h1>Recibo Telefonico</h1>
         <label for="" >Minutos de celular (10.00 MXN c/u)</label>
         <br>
