Cambios Varios de diferentes ejercicios

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
               Tabla con formato CSS3 Prácica 
           </a>
 
+          <br>
 
+          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FscoutsCatolicosXTO%2Fposts%2Fpfbid025qadyyXNpvTGYbEwQSpAkWD5TbcJDoHvJaVRMjb2xzXaC7aFgvfjuHLjtppAQDFjl&show_text=true&width=500" width="500" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
      </body>
 
