Se agrega los ejercicios cuaresmales

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                </ul>
                <ul>
                     <li><a href="Posicionamiento/variosEjemplos.html">Posicionamiento</a></li>
+                    <li><a href="EjerciciosCuaresmales/indicePrincipal.html">Ejercicios Cuaresmales</a></li>
                </ul>
           </nav>
           <a href="" class="btn">Login</a>
